# Vestige-Filter

./: CMakeLists.txt  FAQ_and_Design_Choices.md  LICENSE  README.md  Research_and_Overview.md
include/: LogGenerator.hpp  SocketServer.hpp
src/: LogGenerator.cpp  SocketServer.cpp  main.cpp
